--- a/victor-mao-angular/package.json
+++ b/victor-mao-angular/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~10.0.5",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.0.5",
+    "@angular/google-maps": "^11.0.4",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
