--- a/victor-mao-angular/package.json
+++ b/victor-mao-angular/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "marked": "^2.1.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
